--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,28 +1,33 @@
 
 History
-=======
+-------
+
+0.6 - 10/23/2010
+~~~~~~~~~~~~~~~~
+
+- No really, revert add Plone to install_requires
 
 0.5 - 10/22/2010
-----------------
+~~~~~~~~~~~~~~~~
 
 - Revert add Plone to install_requires
 
 0.4 - 10/22/2010
-----------------
+~~~~~~~~~~~~~~~~
 
 - Add Plone to install_requires
 
 0.3 - 10/22/2010
-----------------
+~~~~~~~~~~~~~~~~
 
 - Another setuptools fix
 
 0.2 - 10/22/2010
-----------------
+~~~~~~~~~~~~~~~~
 
 - Setuptools fix
 
 0.1 - 10/21/2010
-----------------
+~~~~~~~~~~~~~~~~
 
 - Initial release
