--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -7,9 +7,10 @@ History
 
 - No really, revert 'add Plone to install_requires'
 - Add docs/HISTORY.txt
-- Add troubleshooting tips to consternation section
+- Add more troubleshooting tips to consternation section
 - Allow user to specify path to Plone site object
-- Allow user to customize settings in ``buildout.cfg``
+- Allow user to configure all customizable settings in both ``buildout.cfg``
+  and via command line arguments.
 
 0.5 - 10/22/2010
 ~~~~~~~~~~~~~~~~
@@ -19,7 +20,7 @@ History
 0.4 - 10/22/2010
 ~~~~~~~~~~~~~~~~
 
-- Add Plone to install_requires
+- Add 'Plone' to install_requires
 
 0.3 - 10/22/2010
 ~~~~~~~~~~~~~~~~
