--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -8,10 +8,13 @@ History
 - No really, revert 'add Plone to install_requires'
 - Add docs/HISTORY.txt
 - Add more troubleshooting tips to consternation section
-- Allow user to specify path to Plone site object
-- Allow user to configure all customizable settings in both ``buildout.cfg``
-  and via command line arguments
+- Add configurable options: path, illegal_chars, html_extensions,
+  image_extensions, and target_tags
+- Allow user to set all configurable options via both ``buildout.cfg``
+  and command line arguments
 - Move option parser to Utils class
+- Updates to README
+- Refactor utility functions
 
 0.5 - 10/22/2010
 ~~~~~~~~~~~~~~~~
