--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,10 +2,10 @@
 History
 -------
 
-0.8 (10/26/2010)
+0.8 (10/27/2010)
 ~~~~~~~~~~~~~~~~
 
-- ``path`` now supports sub-directories
+- Support the importing of content to folders within the Plone site object
 
 0.7 (10/25/2010)
 ~~~~~~~~~~~~~~~~
