--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,7 @@ History
 0.8.1 (10/28/2010)
 ~~~~~~~~~~~~~~~~~~
 
+- Doc fixes
 - Add support to optionally publish content after creation
 - Add support for generic files
 
