--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,9 +2,10 @@
 History
 -------
 
-0.8.1 (10/28/2010)
+0.8.1 (10/29/2010)
 ~~~~~~~~~~~~~~~~~~
 
+- Add 'slugify' support
 - Doc fixes
 - Add support to optionally publish content after creation
 - Add support for generic files
