--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,11 @@
 History
 -------
 
-0.8.2 ()
-~~~~~~~~
+0.8.2 (11/02/2010)
+~~~~~~~~~~~~~~~~~~
+
+- Add rename feature
+- Fix regressions that occured in 0.8.1
 
 0.8.1 (10/29/2010)
 ~~~~~~~~~~~~~~~~~~
