--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,13 +2,14 @@
 History
 -------
 
-0.9.0 ()
-~~~~~~~~
+0.9.0 (11/03/2010)
+~~~~~~~~~~~~~~~~~~
 
 - Fix regressions introduced (or unresolved as of) 0.8.2. Thanks Derek
   Broughton for the bug report(s).
     - Many fixes to convert_parameter_values() method which converts
       recipe parameters to arguments passed to main()
+    - Fix slugify feature
 
 0.8.2 (11/02/2010)
 ~~~~~~~~~~~~~~~~~~
