--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,16 @@
 History
 -------
 
+0.9.2 (11/03/2010)
+~~~~~~~~~~~~~~~~~~
+
+* More doc fixes
+
+0.9.1 (11/03/2010)
+~~~~~~~~~~~~~~~~~~
+
+* Doc fixes
+
 0.9.0 (11/03/2010)
 ~~~~~~~~~~~~~~~~~~
 
