--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,7 @@ History
 ~~~~~~~~
 
 * Add Plone 2.5 compat
+* Add "typeswap" feature
 
 0.9.2 (11/03/2010)
 ~~~~~~~~~~~~~~~~~~
@@ -25,7 +26,7 @@ History
 
   * Many fixes to convert_parameter_values() method which converts
     recipe parameters to arguments passed to main()
-  * Fix slugify feature
+  * Fix "slugify" feature
 
 0.8.2 (11/02/2010)
 ~~~~~~~~~~~~~~~~~~
