--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,11 +2,11 @@
 History
 -------
 
-0.9.3 ()
-~~~~~~~~
+0.9.3 (11/04/2010)
+~~~~~~~~~~~~~~~~~~
 
 * Add Plone 2.5 compat
-* Add "typeswap" feature
+* Better file system path handling to avoid IndexErrors
 
 0.9.2 (11/03/2010)
 ~~~~~~~~~~~~~~~~~~
