--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,7 +6,9 @@ History
 ~~~~~~~~~~~~~~~~~~
 
 * Add Plone 2.5 compat
-* Better file system path handling to avoid IndexErrors
+* Bug fixes
+
+  * Better handling of file system path; better base dir calculation
 
 0.9.2 (11/03/2010)
 ~~~~~~~~~~~~~~~~~~
