--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,8 @@ History
 ~~~~~~~~
 
 * Remove script when recipe is uninstalled
+* Add support for XPath in target_tags
+* Add "typeswap" feature
 
 0.9.3 (11/04/2010)
 ~~~~~~~~~~~~~~~~~~
