--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,12 +2,13 @@
 History
 -------
 
-0.9.4 ()
-~~~~~~~~
+0.9.4 (11/06/2010)
+~~~~~~~~~~~~~~~~~~
 
-* Remove script when recipe is uninstalled
-* Add support for XPath in target_tags
-* Add "typeswap" feature
+* Remove ``bin/import`` script when recipe is uninstalled [aclark4life]
+* Add support for XPath syntax in target_tags [derek]
+* Add "typeswap" feature [aclark4life]
+* Update docs [aclark4life]
 
 0.9.3 (11/04/2010)
 ~~~~~~~~~~~~~~~~~~
