--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ History
 0.9.5 (11/08/2010)
 ~~~~~~~~~~~~~~~~~~
 
-* Add "match" feature
+* Add match feature [aclark4life]
 
 0.9.4 (11/06/2010)
 ~~~~~~~~~~~~~~~~~~
