--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,7 @@ History
 ~~~~~~~~~~~~~~~~~~
 
 * Add match feature [aclark4life]
+* Add more project justifications to the docs [aclark4life]
 
 0.9.4 (11/06/2010)
 ~~~~~~~~~~~~~~~~~~
