--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,9 +5,10 @@ History
 0.9.6 (11/08/2010)
 ~~~~~~~~~~~~~~~~~~
 
-* Fixes to match feature 
+* Fixes to "match" feature 
 * Combine all modules into one
 * Remove a stray pdb (!)
+* Add tests (we're at 20% test coverage people!)
 
 0.9.5 (11/08/2010)
 ~~~~~~~~~~~~~~~~~~
