--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,12 @@
 History
 -------
 
+0.9.7 (11/08/2010)
+~~~~~~~~~~~~~~~~~~
+
+* Fix import error
+* Add outfile to logger
+
 0.9.6 (11/08/2010)
 ~~~~~~~~~~~~~~~~~~
 
