--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,12 @@
 History
 -------
 
-0.9.8 ()
-~~~~~~~~
+0.9.8 (11/12/2010)
+~~~~~~~~~~~~~~~~~~
+
+* Add "paths" feature to allow multi-import dirs (on the
+  file system), and corresponding object paths (in Plone)
+  to be specified.
 
 0.9.7 (11/08/2010)
 ~~~~~~~~~~~~~~~~~~
