Test def _get_results(self, paths_map, index)

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,11 @@
 History
 -------
 
+0.9.9 (11/15/2010)
+~~~~~~~~~~~~~~~~~~
+
+* Added a large number of tests; associated refactoring
+
 0.9.8 (11/12/2010)
 ~~~~~~~~~~~~~~~~~~
 
