--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,13 @@
 History
 -------
 
+1.0a5 (02/05/2011)
+~~~~~~~~~~~~~~~~~~
+
+* Rename to ``mr.importer``
+* Switch to **kwargs in main()
+    - Better _SETTINGS handling
+
 1.0a4 (01/12/2011)
 ~~~~~~~~~~~~~~~~~~
 
