Restore lost changes

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,11 @@
 History
 -------
 
+1.0b4 (03/23/2011)
+~~~~~~~~~~~~~~~~~~
+
+* Bug fix for when not --match'ing.
+
 1.0b3 (03/22/2011)
 ~~~~~~~~~~~~~~~~~~
 
