--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,11 @@
 History
 -------
 
+1.0rc1 (Unreleased)
+~~~~~~~~~~~~~~~~~~~
+
+* Final rename: rename ``charm`` to ``parse2plone``
+
 1.0b5 (03/24/2011)
 ~~~~~~~~~~~~~~~~~~
 
